# GenshinImpactPianoExtract

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
dependencies/: CMakeLists.txt
src/: buildconfig.h  buildconfig.h.in  jsonwriter.cpp  jsonwriter.h  keyposfinder.cpp  keyposfinder.h  main.cpp  midiwriter.cpp  midiwriter.h  notedetector.cpp  notedetector.h  pulsedetector.h  termui.cpp  termui.h  utils.h
